--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,8 @@ on:
     branches: ["master"]
   pull_request:
     branches: ["master"]
+env:
+  SECRET_KEY: 93ea69f5603092348262d0c4055bce05
 jobs:
   unit_tests:
     runs-on: ubuntu-latest
